# InsuranceSimulator

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat
src/: main.cpp
